--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="https://www.facebook.com/BARNZ.ZZZ" target="_blank" title="Facebook">
             <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/facebook.svg" alt="Facebook" class="icon">
         </a>
-        <a href="https://www.instagram.com/ernz.zzz/" target="_blank" title="Instagram">
+        <a href="https://www.instagram.com/barnz.zzz/" target="_blank" title="Instagram">
             <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/instagram.svg" alt="Instagram" class="icon">
         </a>
         <a href="https://discord.gg/3hHSnSTsme" target="_blank" title="Discord">
