--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="https://www.reddit.com/user/BARNXZ/" target="_blank" title="Reddit">
             <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/reddit.svg" alt="Reddit" class="icon">
         </a>
-        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" title="Menu">
+        <a href="https://barnz2.github.io/skills_menu/" title="Menu">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" viewBox="0 0 24 24">
                 <path d="M4 6h16M4 12h16M4 18h16" stroke="white" stroke-width="2" stroke-linecap="round"/>
             </svg>
